	- make Qt support non-experimental.
        - clarify the confusing section about the file descriptor being
          kept alive.
        - document the race between loading of an event module and
          child processes exiting.
        - support POE as "backend" (with some caveats, POE is not generic
          enough, and darn slow).
        - support Wx and Prima through POE.
        - optimise perl backend a bit (less memory).
        - roughly cut EV memory use in half and icrease its speed by 30%,
          by removing undocumented functionality.

3.2  Thu Apr 24 10:10:40 CEST 2008
	- do not die when anyevent watchers are destroyed while running callbacks
          in the pureperl backend (could only happen when two watchers are registered
          for the same fh/poll combo).
        - support autoloading for child watchers, was broken in all versions.
	- implement PERL_ANYEVENT_MODEL env variable.
        - (experimental) implement interface to the (very crashy/buggy) Event::Lib module.
        - (experimental) implement interface to the Qt module (cannot be autoprobed).
        - this release is IO:AnyEvent-proof.

3.12 Tue Apr 22 07:11:46 CEST 2008
	- reinstate AUTHOR section that got lost somehow.
        - do not hang in the testsuite with badly broken perls (activestate,
          strawberry...), but instead diagnose the problem and continue.
        - use INT instead of CHLD in an attempt to support broken windows perls
          better (this decreases the test quality, unfortunately).
        - do not send the signal to the process group
          (no problem for CHLD, bad for INT :).

3.11 Sat Apr 19 06:57:31 CEST 2008
	- major documentation rework.
        - document the fact that child watchers only watch for zombies.
        - fix the child watcher example.

3.1  Wed Apr 16 17:09:01 CEST 2008
	- work around recurring bugs in Tk by dup'ing filehandles, the
          only method with good success chances on Tk (the bugs apparently