@@ -19,4 +19,8 @@ t/00_load.t
 t/01_basic.t
 t/02_signals.t
 t/03_child.t
+eg/bench
+eg/runbench
+eg/bench2
+eg/runbench2
 META.yml                                 Module meta-data (added by MakeMaker)
